--- a/CVIT_9July3_Day0_OpencvMatplotlib.ipynb
+++ b/CVIT_9July3_Day0_OpencvMatplotlib.ipynb
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "MhbMx8xB2BTA"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -112,9 +112,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lDqSgEcd2wjZ",
-        "outputId": "6a45ac73-1f49-4fdc-80c8-1b082f247545"
+        "outputId": "63bb1dbc-5d5a-4cf7-a9fc-dcd05c571424"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,16 +146,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "90852e35-b8e6-4721-ea13-812c095103e9"
+        "outputId": "03ff5ab3-08ee-4434-d988-b66b8bca6fc9"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "(3,)\n",
-            "5 2 3\n",
+            "1 2 3\n",
             "[5 2 3]\n"
           ]
         }
@@ -196,9 +196,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mbulI3hZ3Zt1",
-        "outputId": "4e400634-59a4-44b1-946b-1189c6811fb9"
+        "outputId": "8b2e9015-6abb-4fde-d056-e8acbee27ef3"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,9 +249,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ae-20hnH3kji",
-        "outputId": "f0dce0ac-f581-4ed3-8437-419e55ac9790"
+        "outputId": "980ff3ca-c263-416f-c2a4-7cd7d449055a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,12 +282,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 211
+          "height": 200
         },
         "id": "sqSnXeza31Bh",
-        "outputId": "cb722bb9-762c-4788-f4f5-61eb1c7a86e2"
+        "outputId": "9ee65330-e117-4b38-d912-9454939037ba"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -296,7 +296,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-7-99f898b60f42>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m    \u001b[0;31m# WRONG\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# RIGHT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-8-99f898b60f42>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m    \u001b[0;31m# WRONG\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# RIGHT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mTypeError\u001b[0m: array() takes from 1 to 2 positional arguments but 4 were given"
           ]
         }
@@ -382,9 +382,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YPM1c6Qx3-dg",
-        "outputId": "9decedbb-f495-4bc3-880a-720474bf87a9"
+        "outputId": "b07835c9-1946-4c48-de99-1d54a81f65fd"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,8 +402,8 @@
             "[2.         2.11111111 2.22222222 2.33333333 2.44444444 2.55555556\n",
             " 2.66666667 2.77777778 2.88888889 3.        ]\n",
             "*****************************************************************\n",
-            "[[0.57865919 0.14919022]\n",
-            " [0.02368888 0.42559104]]\n",
+            "[[0.76682342 0.19238653]\n",
+            " [0.27269796 0.49431538]]\n",
             "*****************************************************************\n"
           ]
         }
@@ -424,7 +424,7 @@
       "cell_type": "code",
       "source": [
         "a = np.array([20, 30, 40, 50])\n",
-        "b = np.arange(5)\n",
+        "b = np.arange(4)\n",
         "print(a)\n",
         "print(b)\n",
         "c = a - b\n",
@@ -441,22 +441,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1MKtQHyB402Y",
-        "outputId": "9207b04f-e55d-4130-d975-3bb1dcd5721c"
+        "outputId": "dd825cee-f557-4239-8ad4-e690a1609095"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[20 30 40 50  4]\n",
-            "[0 1 2 3 4]\n",
-            "[20 29 38 47  0]\n",
-            "[20 29 38 47  0]\n",
-            "[20 31 42 53  8]\n",
-            "[ 0  1  4  9 16]\n",
-            "[ 9.12945251 -9.88031624  7.4511316  -2.62374854 -7.56802495]\n",
-            "[ True  True False False  True]\n",
+            "[20 30 40 50]\n",
+            "[0 1 2 3]\n",
+            "[20 29 38 47]\n",
+            "[20 29 38 47]\n",
+            "[20 31 42 53]\n",
+            "[0 1 4 9]\n",
+            "[ 9.12945251 -9.88031624  7.4511316  -2.62374854]\n",
+            "[ True  True False False]\n",
             "<class 'numpy.ndarray'>\n"
           ]
         }
@@ -625,7 +625,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "ktpa_Q2X9Bng"
       },
@@ -673,9 +673,9 @@
           "height": 447
         },
         "id": "hy1vq1BLBSOm",
-        "outputId": "9ba30fa3-23e5-45a5-804f-2288ff544594"
+        "outputId": "5931af4b-eb71-4236-f7d3-7123fc64e4ef"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -715,7 +715,7 @@
       "metadata": {
         "id": "dZrqSCs5CBA7"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
